[gd_scene load_steps=2 format=3 uid="uid://cqhck1g474s4f"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_11f7d"]

[node name="Control" type="Control"]
layout_mode = 3
anchor_left = 0.007
anchor_top = 0.012
anchor_right = 1.0
anchor_bottom = 0.963
offset_left = -8.064
offset_top = -7.776
offset_bottom = 15.976
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_11f7d")

[node name="DialogueBox" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.007
anchor_top = 0.7
anchor_right = 0.993
anchor_bottom = 1.0
offset_left = -0.0640001
offset_top = -3.05176e-05
offset_right = 0.0639648

[node name="DialoguePanel" type="Panel" parent="DialogueBox"]
layout_mode = 2

[node name="DialogueText" type="TextEdit" parent="DialogueBox/DialoguePanel"]
light_mask = 0
use_parent_material = true
layout_mode = 2
anchor_left = 0.014
anchor_top = 0.25
anchor_right = 0.986
anchor_bottom = 0.88
offset_left = 0.0960016
offset_right = -1.09583
offset_bottom = 0.039978
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Placeholder Text"

[node name="Narrator" type="TextEdit" parent="DialogueBox/DialoguePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.021
anchor_top = 0.042
anchor_right = 0.12
anchor_bottom = 0.25
offset_left = 0.144001
offset_top = -0.0639715
offset_right = -0.319992
offset_bottom = 2.28882e-05
placeholder_text = "Narrator"

[node name="PlayerControls" type="HBoxContainer" parent="."]
layout_mode = 2
anchor_left = 0.007
anchor_top = 0.6
anchor_right = 0.222
anchor_bottom = 0.7
offset_left = -0.0640001
offset_right = 0.255981
offset_bottom = -3.05176e-05

[node name="AutoPlay" type="Button" parent="PlayerControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "AP"

[node name="Rewind" type="Button" parent="PlayerControls"]
layout_mode = 2
text = "Rewind"

[node name="PlayerInput" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.444
anchor_top = 0.3
anchor_right = 0.556
anchor_bottom = 0.689
offset_left = 0.511963
offset_right = 1.48792
offset_bottom = 0.039978
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="PlayerInput"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
text = "Worked?"

[node name="Button2" type="Button" parent="PlayerInput"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
text = "Working?"

[node name="Button3" type="Button" parent="PlayerInput"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
text = "Is this thing on?"
